Fixed heatmap check-boxes alignment issue

--- a/comets/css/comets.css
+++ b/comets/css/comets.css
@@ -197,10 +197,6 @@ label[for="showMetabolites"] input {
 label[for="showMetabolites"] div {
     display: inline-block;
 }
-label[for="displayAnnotations"],
-label[for="clusterResults"] {
-    margin-top: 5px;
-}
 .axisLegend {
     text-align: center;
     margin-top: 20px;
